--- a/Sager-Task-Frontend/src/index.css
+++ b/Sager-Task-Frontend/src/index.css
@@ -1,7 +1,16 @@
 @import "tailwindcss";
 
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
 
-
-.active {
-    @apply 
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+        -ms-overflow-style: none;
+        /* IE and Edge */
+        scrollbar-width: none;
+        /* Firefox */
+    }
 }
+
